# infra

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARM64_SUPPORT_STRATEGY.md  CLOUDFLARE_API_TOKEN_PERMISSIONS.md  CLOUDFLARE_ZONES_SETUP.md  CONTAINER_SETUP.md  CONTAINER_TAGGING_STRATEGY.md  DEPLOYMENT_GUIDE.md  DOMAIN_REGISTRAR_TRANSFER.md  Dockerfile  EMAIL_SETUP_COMPLETE.md  FREE_TIER_RESOURCES.md  GITHUB_PAGES_SETUP.md  GODADDY_API_RESTRICTION.md  GODADDY_API_STATUS.md  GODADDY_API_TROUBLESHOOTING.md  GODADDY_AUTH_VERIFIED.md  GODADDY_MIGRATION_STATUS.md  GODADDY_SETUP.md  GODADDY_TEST_KEY_GUIDE.md  GODADDY_TO_CLOUDFLARE_MIGRATION.md  GOOGLE_WORKSPACE_SETUP.md  MULTICLOUD_COMPLETE_STATUS.md  MULTICLOUD_SETUP.md  MULTICLOUD_STATUS_UPDATE.md  MULTISITE_PAGES_SETUP.md  Makefile  NGINX_CONTAINER_PROXY.md  OIDC_REDIRECT_URI_FIX.md  PAGES_SETUP_NEXT_STEPS.md  PRACTICAL_MIGRATION_PLAN.md  PRACTICAL_SECRETS_MANAGEMENT.md  README.md  SECRETS_MANAGEMENT.md  SECURITY_ANALYSIS.md  SSL_CERTIFICATE_MANAGEMENT.md  billing_damage_assessment.txt  billing_report_actual.txt  check_tokyo3_records.py  (+35 more)
ansible/: SETUP_GUIDE.md  SIMPLE_SECRETS_DEPLOYMENT.md  ansible.cfg  ansible.cfg.in
clint/: __init__.py  __main__.py
docs/: CLOUDFLARE_WRANGLER.md  JEKYLL_WEBSITES.md  MULTISITE_JEKyll_DEPLOYMENT.md  SERVICE_ENDPOINT_REQUIREMENTS.md  index.md
jekyll-multisite/: build.sh
pages-jekyll-template/: .gitignore  Gemfile  README.md  _config.yml
scripts/: add-firewall-rules.sh  apply-firewall-rules.sh  apply-google-firewall.sh  check-services-container-update.sh  cursor_agent.py  find-oracle-arm-capacity.sh  import-all-infrastructure.sh  import-existing-state.sh  import-google-cloud.sh  import-ibm-cloud.sh  import-oracle-cloud.sh  infrastructure-status.sh  retry-oracle-instances.sh  run-billing-report.sh  run-infrastructure-agent.sh  setup-oracle-cloud.sh  setup-terraform-backend.sh  update_billing_report.py  visualize-infrastructure.sh
src/: check_oracle_arm_capacity.py  cost_explorer.py  enhanced_billing_report.py  internal_report_generator.py  main.py  multicloud_cost_analyzer.py  multicloud_cost_explorer.py  multicloud_main.py  multicloud_report_generator.py  report_generator.py  sanitizer.py  terraform_discovery.py  terraform_generator.py  (+1 more)
(+258 files in other folders)
